// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResetPasswordPage should match invalid token message section snapshot 1`] = `
<div
  className="d-flex justify-content-center m-4"
>
  <div
    className="d-flex flex-column"
  >
    <div
      className="text-center mw-420"
    >
      <div
        className="fade alert alert-danger show"
        role="alert"
      >
        <div
          className="text-danger alert-heading h4"
        >
          <span>
            Invalid Password Reset Link
          </span>
        </div>
        <span>
          This password reset link is invalid. It may have been used already. To reset your password, go to the 
          <a
            href="/login"
            onClick={[Function]}
            target="_self"
          >
            <span>
              sign-in
            </span>
          </a>
           page and select 
          <strong>
            <span>
              Forgot Password
            </span>
          </strong>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResetPasswordPage should match pending reset message section snapshot 1`] = `
<div
  className="d-flex justify-content-center m-4"
>
  <div
    className="d-flex flex-column mw-500"
  >
    <form
      className=""
    >
      <div
        className="reset-password-container"
      >
        <h1
          className="mt-3"
        >
          Reset Your Password
        </h1>
        <p
          className="mb-4"
        >
          Enter and confirm your new password.
        </p>
        <div
          className="d-flex flex-column align-items-start"
        >
          <div
            className="form-group w-100"
          >
            <label
              className="h6 mr-1 form-label"
              htmlFor="reset-password-input"
            >
              New Password
            </label>
            <input
              aria-describedby=""
              className="form-control"
              id="reset-password-input"
              name="new-password1"
              onBlur={[Function]}
              placeholder=""
              type="password"
            />
          </div>
          <div
            className="form-group w-100"
          >
            <label
              className="h6 mr-1 form-label"
              htmlFor="confirm-password-input"
            >
              Confirm Password
            </label>
            <input
              aria-describedby=""
              className="form-control"
              id="confirm-password-input"
              name="new-password2"
              onChange={[Function]}
              placeholder=""
              type="password"
              value=""
            />
            <strong
              className="invalid-feedback"
              id="confirm-password-input-invalid-feedback"
            >
              Passwords do not match.
            </strong>
          </div>
        </div>
      </div>
      <button
        aria-disabled={true}
        aria-live="assertive"
        className="pgn__stateful-btn pgn__stateful-btn-state-pending btn-primary disabled btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="submit"
      >
        <span
          className="d-flex align-items-center justify-content-center"
        >
          <span
            className="pgn__stateful-btn-icon"
          >
            <span
              aria-hidden={true}
              className="icon fa fa-spinner fa-spin"
              id="Icon1"
            />
          </span>
          Reset my password
        </span>
      </button>
    </form>
  </div>
</div>
`;

exports[`ResetPasswordPage should match reset password default section snapshot 1`] = `
<div
  className="d-flex justify-content-center m-4"
>
  <div
    className="d-flex flex-column mw-500"
  >
    <form
      className=""
    >
      <div
        className="reset-password-container"
      >
        <h1
          className="mt-3"
        >
          Reset Your Password
        </h1>
        <p
          className="mb-4"
        >
          Enter and confirm your new password.
        </p>
        <div
          className="d-flex flex-column align-items-start"
        >
          <div
            className="form-group w-100"
          >
            <label
              className="h6 mr-1 form-label"
              htmlFor="reset-password-input"
            >
              New Password
            </label>
            <input
              aria-describedby=""
              className="form-control"
              id="reset-password-input"
              name="new-password1"
              onBlur={[Function]}
              placeholder=""
              type="password"
            />
          </div>
          <div
            className="form-group w-100"
          >
            <label
              className="h6 mr-1 form-label"
              htmlFor="confirm-password-input"
            >
              Confirm Password
            </label>
            <input
              aria-describedby=""
              className="form-control"
              id="confirm-password-input"
              name="new-password2"
              onChange={[Function]}
              placeholder=""
              type="password"
              value=""
            />
            <strong
              className="invalid-feedback"
              id="confirm-password-input-invalid-feedback"
            >
              Passwords do not match.
            </strong>
          </div>
        </div>
      </div>
      <button
        aria-disabled={false}
        aria-live="assertive"
        className="pgn__stateful-btn pgn__stateful-btn-state-null btn-primary btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="submit"
      >
        <span
          className="d-flex align-items-center justify-content-center"
        >
          Reset my password
        </span>
      </button>
    </form>
  </div>
</div>
`;

exports[`ResetPasswordPage should match successful reset message section snapshot 1`] = `
<div
  className="d-flex justify-content-center m-4"
>
  <div
    className="d-flex flex-column"
  >
    <div
      className="text-center mw-500"
    >
      <div
        className="fade alert alert-success show"
        role="alert"
      >
        <div
          className="text-success alert-heading h4"
        >
          <span>
            Password Reset Complete.
          </span>
        </div>
        <span>
          Your password has been reset. 
          <a
            className="font-weight-normal text-info alert-link"
            href="/login"
            onClick={[Function]}
            onKeyDown={[Function]}
          >
            <span>
              Sign-in to your account.
            </span>
          </a>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`ResetPasswordPage should match unsuccessful reset message section snapshot 1`] = `
Array [
  <div
    className="d-flex justify-content-center m-4"
  >
    <div
      className="d-flex flex-column"
    >
      <div
        className="text-center mw-500"
      >
        <div
          className="fade alert alert-danger show"
          role="alert"
        >
          <span>
            Password reset was unsuccessfull. 
          </span>
        </div>
      </div>
    </div>
  </div>,
  <div
    className="d-flex justify-content-center m-4"
  >
    <div
      className="d-flex flex-column mw-500"
    >
      <form
        className=""
      >
        <div
          className="reset-password-container"
        >
          <h1
            className="mt-3"
          >
            Reset Your Password
          </h1>
          <p
            className="mb-4"
          >
            Enter and confirm your new password.
          </p>
          <div
            className="d-flex flex-column align-items-start"
          >
            <div
              className="form-group w-100"
            >
              <label
                className="h6 mr-1 form-label"
                htmlFor="reset-password-input"
              >
                New Password
              </label>
              <input
                aria-describedby=""
                className="form-control"
                id="reset-password-input"
                name="new-password1"
                onBlur={[Function]}
                placeholder=""
                type="password"
              />
            </div>
            <div
              className="form-group w-100"
            >
              <label
                className="h6 mr-1 form-label"
                htmlFor="confirm-password-input"
              >
                Confirm Password
              </label>
              <input
                aria-describedby=""
                className="form-control"
                id="confirm-password-input"
                name="new-password2"
                onChange={[Function]}
                placeholder=""
                type="password"
                value=""
              />
              <strong
                className="invalid-feedback"
                id="confirm-password-input-invalid-feedback"
              >
                Passwords do not match.
              </strong>
            </div>
          </div>
        </div>
        <button
          aria-disabled={false}
          aria-live="assertive"
          className="pgn__stateful-btn pgn__stateful-btn-state-failure btn-primary btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="submit"
        >
          <span
            className="d-flex align-items-center justify-content-center"
          >
            Reset my password
          </span>
        </button>
      </form>
    </div>
  </div>,
]
`;

exports[`ResetPasswordPage show spinner component during token validation 1`] = `
<div
  className="container position-absolute h-90"
>
  <div
    className="d-flex justify-content-center align-items-center h-90"
  >
    <div
      className="spinner-border text-primary"
    />
  </div>
</div>
`;
